--- a/src/MultiAlignWin/app.config
+++ b/src/MultiAlignWin/app.config
@@ -1,8 +1,8 @@
-<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0"?>
 <configuration>
     <configSections>
-        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="MultiAlignWin.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+            <section name="MultiAlignWin.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
         </sectionGroup>
     </configSections>
     <userSettings>
@@ -73,8 +73,7 @@
             <setting name="UserAlignmentOptionsCalibrationTypeMzCoeff" serializeAs="String">
                 <value>False</value>
             </setting>
-            <setting name="UserAlignmentOptionsCalibrationTypeNetRelationship"
-                serializeAs="String">
+            <setting name="UserAlignmentOptionsCalibrationTypeNetRelationship" serializeAs="String">
                 <value>False</value>
             </setting>
             <setting name="UserAlignmentOptionsCalibrationTypeHybrid" serializeAs="String">
@@ -129,7 +128,7 @@
                 <value>6</value>
             </setting>
             <setting name="UserDBFormLocalDatabasePath" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="UserDBFormPMTQuality" serializeAs="String">
                 <value>1</value>
@@ -165,7 +164,7 @@
                 <value>True</value>
             </setting>
             <setting name="UserOutputPath" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="UserPeakPickingUMCReportingTypePeakArea" serializeAs="String">
                 <value>False</value>
@@ -195,16 +194,16 @@
                 <value>20</value>
             </setting>
             <setting name="UserDBFormMTDBExperimentFilter" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="UserDBFormMTDBPriorProbabilities" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="UserDBFormExperimentFilter" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="UserDBFormExperimentExclusionFilter" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="UserPeakMatchingNETTolerance" serializeAs="String">
                 <value>0.03</value>
@@ -226,4 +225,7 @@
             </setting>
         </MultiAlignWin.Properties.Settings>
     </userSettings>
+  <startup useLegacyV2RuntimeActivationPolicy="true">
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
+  </startup>
 </configuration>
