- Added quotes to a post-build copy command so it will work with you have a space in your source directory folder names

--- a/src/MultiAlignConsole/MultiAlignConsole.csproj
+++ b/src/MultiAlignConsole/MultiAlignConsole.csproj
@@ -141,7 +141,7 @@
   </Target>
   -->
   <PropertyGroup>
-    <PostBuildEvent>copy ..\..\..\..\..\lib\$(PlatformName)\System.Data.SQLite.dll $(TargetDir)System.Data.SQLite.dll</PostBuildEvent>
+    <PostBuildEvent>copy ..\..\..\..\..\lib\$(PlatformName)\System.Data.SQLite.dll "$(TargetDir)System.Data.SQLite.dll"</PostBuildEvent>
     <PreBuildEvent>REM files.txt MultiAlignAnalysis_parameters.xml SYN_DATA02 SINGLE
 REM -plots  SYN_DATA02\SINGLE</PreBuildEvent>
   </PropertyGroup>
