Issue #176 Ability to align to MTDB and peak match (no results saved for peak matching yet - see ticket #180) Drift times are not yet loaded because they don't exist and stored procedures don't include this.

--- a/src/PNNLProteomics/PNNLProteomics.csproj
+++ b/src/PNNLProteomics/PNNLProteomics.csproj
@@ -206,6 +206,7 @@
     <Compile Include="IO\IAnalysisWriter.cs" />
     <Compile Include="IO\IMultiAlignAnalysisReader.cs" />
     <Compile Include="IO\IMultiAlignAnalysisWriter.cs" />
+    <Compile Include="IO\InputAnalysisInfo.cs" />
     <Compile Include="IO\IOProgressEventArgs.cs" />
     <Compile Include="IO\MTDB\MTDBLoaderFactory.cs" />
     <Compile Include="IO\MultiAlignParameterIniFileReader.cs" />
