--- a/src/FunctionalRedundancy/FunctionalRedundancy.csproj
+++ b/src/FunctionalRedundancy/FunctionalRedundancy.csproj
@@ -55,7 +55,8 @@
     <CodeAnalysisIgnoreBuiltInRules>false</CodeAnalysisIgnoreBuiltInRules>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="MammothLibrary">
+    <Reference Include="MammothLibrary, Version=1.0.0.0, Culture=neutral, processorArchitecture=AMD64">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\lib\x64\MammothLibrary.dll</HintPath>
     </Reference>
     <Reference Include="Mapack">
@@ -77,6 +78,7 @@
       <HintPath>..\..\lib\x64\System.Data.SQLite.dll</HintPath>
     </Reference>
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -88,6 +90,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\MultiAlignCustomControls\MultiAlignCustomControls.csproj">
+      <Project>{EE7596B2-FCD3-471A-856F-1270713DD5B1}</Project>
+      <Name>MultiAlignCustomControls</Name>
+    </ProjectReference>
     <ProjectReference Include="..\PNNLControls\PNNLControls.csproj">
       <Project>{9409DE9B-F3F0-41AA-95F5-8BFD525F5669}</Project>
       <Name>PNNLControls</Name>
@@ -99,6 +105,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Service References\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
