--- a/src/MultiAlignConsole/MultiAlignConsole.csproj
+++ b/src/MultiAlignConsole/MultiAlignConsole.csproj
@@ -15,6 +15,7 @@
     <DebugType>pdbonly</DebugType>
     <PlatformTarget>x64</PlatformTarget>
     <ErrorReport>prompt</ErrorReport>
+    <AllowUnsafeBlocks>false</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
     <OutputPath>bin\x86\Release\</OutputPath>
@@ -66,13 +67,7 @@
     <ErrorReport>prompt</ErrorReport>
   </PropertyGroup>
   
- 
   <ItemGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
-    <Reference Include="MultiAlignEngine, Version=1.0.4129.21326, Culture=neutral, processorArchitecture=x86">
-      <SpecificVersion>True</SpecificVersion>
-      <HintPath>..\..\lib\x86\MultiAlignEngine.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System.Data.SQLite, Version=1.0.66.0, Culture=neutral, PublicKeyToken=db937bc2d44ff139, processorArchitecture=x86">
       <SpecificVersion>True</SpecificVersion>
       <HintPath>..\..\lib\x86\System.Data.SQLite.dll</HintPath>
@@ -82,13 +77,29 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\lib\x86\PNNLOmics.dll</HintPath>
     </Reference>
+    <Reference Include="MultiAlignEngine, Version=1.0.4084.24787, Culture=neutral, processorArchitecture=x86">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\lib\x86\MultiAlignEngine.dll</HintPath>
+    </Reference>
   </ItemGroup>
+  
+    <ItemGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
+      <Reference Include="System.Data.SQLite, Version=1.0.66.0, Culture=neutral, PublicKeyToken=db937bc2d44ff139, processorArchitecture=x86">
+        <SpecificVersion>True</SpecificVersion>
+        <HintPath>..\..\lib\x86\System.Data.SQLite.dll</HintPath>
+        <Private>True</Private>
+      </Reference>
+      <Reference Include="PNNLOmics, Version=1.0.0.0, Culture=neutral, processorArchitecture=x86">
+        <SpecificVersion>False</SpecificVersion>
+        <HintPath>..\..\lib\x86\PNNLOmics.dll</HintPath>
+      </Reference>
+      <Reference Include="MultiAlignEngine, Version=1.0.4084.24787, Culture=neutral, processorArchitecture=x86">
+        <SpecificVersion>False</SpecificVersion>
+        <HintPath>..\..\lib\x86\MultiAlignEngine.dll</HintPath>
+      </Reference>
+  </ItemGroup>
+  
   <ItemGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x64' ">
-    <Reference Include="MultiAlignEngine, Version=1.0.4129.21423, Culture=neutral, processorArchitecture=AMD64">
-      <SpecificVersion>True</SpecificVersion>
-      <HintPath>..\..\lib\x64\MultiAlignEngine.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System.Data.SQLite, Version=1.0.66.0, Culture=neutral, PublicKeyToken=db937bc2d44ff139, processorArchitecture=AMD64">
       <SpecificVersion>True</SpecificVersion>
       <HintPath>..\..\lib\x64\System.Data.SQLite.dll</HintPath>
@@ -98,29 +109,14 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\lib\x64\PNNLOmics.dll</HintPath>
     </Reference>
-  </ItemGroup>
-  <ItemGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
-    <Reference Include="MultiAlignEngine, Version=1.0.4129.21326, Culture=neutral, processorArchitecture=x86">
-      <SpecificVersion>True</SpecificVersion>
-      <HintPath>..\..\lib\x86\MultiAlignEngine.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="System.Data.SQLite, Version=1.0.66.0, Culture=neutral, PublicKeyToken=db937bc2d44ff139, processorArchitecture=x86">
-      <SpecificVersion>True</SpecificVersion>
-      <HintPath>..\..\lib\x86\System.Data.SQLite.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="PNNLOmics, Version=1.0.0.0, Culture=neutral, processorArchitecture=x86">
+    <Reference Include="MultiAlignEngine, Version=1.0.4084.24787, Culture=neutral, processorArchitecture=AMD64">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\lib\x86\PNNLOmics.dll</HintPath>
+      <HintPath>..\..\lib\x64\MultiAlignEngine.dll</HintPath>
     </Reference>
   </ItemGroup>
+  
+  
   <ItemGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x64' ">
-    <Reference Include="MultiAlignEngine, Version=1.0.4129.21423, Culture=neutral, processorArchitecture=AMD64">
-      <SpecificVersion>True</SpecificVersion>
-      <HintPath>..\..\lib\x64\MultiAlignEngine.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System.Data.SQLite, Version=1.0.66.0, Culture=neutral, PublicKeyToken=db937bc2d44ff139, processorArchitecture=AMD64">
       <SpecificVersion>True</SpecificVersion>
       <HintPath>..\..\lib\x64\System.Data.SQLite.dll</HintPath>
@@ -130,7 +126,12 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\lib\x64\PNNLOmics.dll</HintPath>
     </Reference>
+    <Reference Include="MultiAlignEngine, Version=1.0.4084.24787, Culture=neutral, processorArchitecture=AMD64">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\lib\x64\MultiAlignEngine.dll</HintPath>
+    </Reference>
   </ItemGroup>
+  
   
   <ItemGroup>
     <Reference Include="System" />
